src/client/components/styles.less
@import url('https://fonts.googleapis.com/css?family=Roboto:400,500');
@import url('https://fonts.googleapis.com/css?family=Material+Icons');

/***** Variable section- should probably be in a config.less or similar. *****/

@animation-curve-fast-out-slow-in: cubic-bezier(0.4, 0, 0.2, 1);

// Spinner

@spinnerArcSize: 270deg;
@spinnerArcTime: 1333ms;
@spinnerArcStartRot: 216deg;
@spinnerDuration: 360 * @spinnerArcTime / (@spinnerArcStartRot + (360deg - @spinnerArcSize));


                    /***** Main stylesheet . *****/

.no-user-select {
    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
}

// Initially the body has this css class, to prevent weird animation affects as the css is injected into the page.
// You should remove this class after your first render.
.disable-animation * {
    transition: none !important;
}

body {
    margin: 0;
    padding: 0;
}

* {
    font-family: Roboto, sans-serif;
    box-sizing: border-box;
    -webkit-tap-highlight-color: rgba(0,0,0,0);
}


.md-app-bar {
    padding: 16px;
    padding-left: 12px;

    h1 {
        display: inline-block;
        padding: 0;
        margin: 0;        
        font-size: 18px;
        line-height: 24px;
        font-weight: normal;
        vertical-align: middle;
        padding-left: 40px;
    }

    i {
        line-height: 24px;
        vertical-align: middle
    }

    .right-icons {
        position: absolute;
        padding-right: 12px;
        right: 0;
        display: inline-block;
    }

    .left-icons {
        display: inline-block;
    }

    box-shadow: 0 2px 5px rgba(0,0,0,.26);
}

.md-blackout{
    position: fixed;
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    background-color: rgba(0, 0, 0, 0.7);
    display: flex;
    align-items: center;
    justify-content: center; 
}

.md-subheader{
    margin: 0px;
    padding: 0px;
    padding-left: 16px;
    line-height: 48px;
}

.md-dialog{
    position: absolute;
    background-color: #FFF;
    padding: 12px;    
    margin: 35px;
    display: flex;
    flex-direction: column;
    h1{
        display: inline-block;
        padding: 0;
        margin: 0;        
        font-size: 18px;
        line-height: 24px;
        font-weight: normal;
        vertical-align: middle;
        padding-left: 12px;
        color: #555; 
    }
    .md-dialog-content{
        padding: 12px;
    }

    .right-icons {
        padding-right: 12px;
        margin-left: auto;
        display: inline-block;
    }
    box-shadow: 0 2px 5px rgba(0,0,0,.26);
}

.md-field {
    max-width: 100%;
    position: relative;
    line-height: 24px;
    input {
        color: #757575;
        background-color: transparent;
        height: 100%;
        padding: 0;
        margin: 0;
        line-height: 24px;
        font-size: 16px;
        border: none;
        width: 100%;
    }

    

    label {
        .no-user-select;
        line-height: 24px;
        padding: 0;
        height: 100%;
        position: absolute;
        left: 0;
        top: 0;
        pointer-events: none;
        font-size: 16px;
        width: 100%;
        transition: transform cubic-bezier(.4,0,.2,1) .2s, color cubic-bezier(.4,0,.2,1) .2s, font-size cubic-bezier(.4,0,.2,1) .2s;
        transform: translateY(0px);
        transform-origin: 0% 0%;
    }

    .after {
        display: inline-block;
        position: absolute;
    
        bottom: -1px;
        height: 2px;
        content: '';
        left: 45%;
        width: 20px;
        transition: cubic-bezier(.4,0,.2,1) .2s;
        visibility: hidden;
    }

    span.underline {
        line-height: 24px;
        padding: 0;
        height: 100%;
        position: absolute;
        left: 0;
        top: 0;
        pointer-events: none;
        width: 100%;
    }
}

.md-field.floating-label {
    padding-top: 24px;
    label {
        padding-top: 24px;
    }
}

.md-field.is-focused {
    .after {
        left: 0;
        width: 100%;
        visibility: visible;
    }
}

.md-field.has-content, .md-field.is-focused {
    label {
        display: none;
    }
}

.md-field.floating-label.has-content, .md-field.floating-label.is-focused {
    label {
        transform: translateY(-18px);
        font-size: 12px;
        display: inline-block
    }
}

input:focus {
    outline: none;
}

.md-button {
    display: inline-block;
    position: relative;
    button {
        .no-user-select;
        border-radius: 2px;
        text-transform: uppercase;
        padding: 0 16px;
        font-size: 14px;
        font-weight: 500;
        text-decoration: none;
        line-height: 36px;
        vertical-align: middle;
        border: none;
        position: relative;
        background: none;

        &.fab {
            width: 56px;
            height: 56px;
            border-radius: 50%;

            box-shadow: 0 5px 8px 0 rgba(0,0,0,.14), 0 3px 3px -2px rgba(0,0,0,.2), 0 1px 8px 0 rgba(0,0,0,.12);
            > * {
                vertical-align: middle;
            }
        }
    }

    button:disabled {
        opacity: 0.65;
    }

    button:focus {
        outline: none;
    }

    button:active {
        border: none;
        outline: none;
    }
}

.ripple-box {
    overflow: hidden;
    position: absolute;
    z-index: 1;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
}

.point-ripple {
    top: -5px;
    left: -8px;
    border-radius: 50%;
    width: 32px;
    height: 32px;
    -webkit-mask-image: -webkit-radial-gradient(circle,#fff,#000);
}

.ripple-icon {
    top: -4px;
    left: -4px;
    border-radius: 50%;
    width: 32px;
    height: 32px;
    -webkit-mask-image: -webkit-radial-gradient(circle,#fff,#000);    
}

.ripple {
    position: absolute;
    border-radius: 50%;
    left: 0px;
    top: 0px;
    width: 4px;
    height: 4px;
    background-color: #fff;
    opacity: 0.0;
    transform: scale(1);
    pointer-events: none;
}
/* ... */

